corrected nav tag children

--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 <body>
     <section id="head">
         <nav>
-            <p>Not logged in <a href="#">Talk</a> <a href="#">Contributions</a> <a href="#">Create account</a> <a
-                    href="#">Log in</a> </p>
-            <p title="View the content page [alt-shift-c]">Article <a href="#"
-                    title="discussion about the content page">Talk</a> Read <a href="#">View source</a> <a href="#">View
-                    history</a> <input type="text" placeholder="Search Wikipedia"> </p>
+            <ul>
+                <li> Not logged in <a href="#">Talk</a> <a href="#">Contributions</a> <a href="#">Create account</a> <a
+                        href="#">Log in</a></li>
+
+                <li title="View the content page [alt-shift-c]">Article </li>
+                <li><a href="#" title="discussion about the content page">Talk</a></li>
+                <li>Read</li>
+                <li> <a href="#">View source</a></li>
+                <li><a href="#">View history</a></li>
+            </ul>
+            <input type="text" placeholder="Search Wikipedia">
+
         </nav>
     </section>
     <section id="left side">
@@ -166,4 +173,5 @@ engineering achievement of the 20th century.</figcaption>
         </p>
     </footer>
 </body>
+
 </html>
